# TinyRenderer

./: .gitignore  .gitmodules  CMakeLists.txt
TinyRenderer/: .gitignore  CMakeLists.txt  README.md  main.cpp
TinyRenderer/lua/: environment.lua  lesson1.lua  lesson2.lua  lesson3.lua  lesson4.lua  lesson5.lua  lesson6.lua  lesson7.lua  lesson8.lua  main.lua  utils.lua
TinyRenderer/luaRegister/: matrix.h  matrix_header.h  render.cpp  render.h
TinyRenderer/model/: model.cpp
TinyRenderer/model/include/: model.h
TinyRenderer/tgaImage/: tgaimage.cpp
TinyRenderer/tgaImage/include/: tgaimage.h
TinyRenderer/utils/: line.cpp  triangle.cpp
TinyRenderer/utils/include/: line.h  luaCpp.h  luaHelper.h  triangle.h  utils.h
libs/: CMakeLists.txt
libs/lua/lua-cmake/: CMakeLists.txt
libs/lua/lua-debug/: CMakeLists.txt
